# f1tenth-labs

lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml
lab1_ws/src/lab1_pkg/launch/: lab1.launch.py
lab1_ws/src/lab1_pkg/scripts/: relay.py  talker.py
